<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableLayout
        android:layout_width="397dp"
        android:layout_height="536dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:padding="5dip">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:includeFontPadding="false"
                android:padding="30dip"
                android:text="@string/buttonRestar" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:padding="30dip"
                android:text="@string/buttonCamb" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:padding="30dip"
                android:text="@string/buttonMod" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:padding="30dip"
                android:text="@string/buttonDivi" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:padding="30dip"
                android:text="@string/button7" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:padding="30dip"
                android:text="@string/button8" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:padding="30dip"
                android:text="@string/button9" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:padding="30dip"
                android:text="@string/buttonMulti" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dip">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:padding="30dip"
                android:text="@string/button4" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:padding="30dip"
                android:text="@string/button5" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:padding="30dip"
                android:text="@string/button6" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:padding="30dip"
                android:text="@string/buttonRestar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:padding="30dip"
                android:text="@string/button1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:padding="30dip"
                android:text="@string/button2" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:padding="30dip"
                android:text="@string/button3" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:padding="30dip"
                android:text="@string/buttonSumar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:orientation="vertical"
            android:padding="5dip">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="2"
                android:background="@drawable/boton_rectangular"
                android:padding="30dip"
                android:paddingStart="0dp"
                android:text="@string/button0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_redondo"
                android:padding="30dip"
                android:text="@string/buttonPunto" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_redondo"
                android:padding="30dip"
                android:text="@string/buttonIgual" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>